Limpieza de warning